[gd_scene load_steps=23 format=3 uid="uid://dmuyrsrqg4sxm"]

[ext_resource type="Script" uid="uid://dsc6n855lhvm8" path="res://Script/World/cell.gd" id="2_7t761"]

[sub_resource type="Theme" id="Theme_lr26m"]
Label/colors/font_color = Color(0, 0, 0, 1)
Label/font_sizes/font_size = 16

[sub_resource type="Gradient" id="Gradient_lr26m"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_1noqf"]
gradient = SubResource("Gradient_lr26m")

[sub_resource type="Gradient" id="Gradient_1noqf"]
interpolation_mode = 1
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.0868, 0.09968, 0.28, 0.196078)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_7t761"]
gradient = SubResource("Gradient_1noqf")

[sub_resource type="Gradient" id="Gradient_ltuy3"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.517942, 0.91, 0.4823, 0.552941)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ltuy3"]
gradient = SubResource("Gradient_ltuy3")

[sub_resource type="Gradient" id="Gradient_nouug"]
offsets = PackedFloat32Array(0.485915)
colors = PackedColorArray(0.18, 0.18, 0.18, 0.52549)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_x6iji"]
gradient = SubResource("Gradient_nouug")

[sub_resource type="Gradient" id="Gradient_y38l7"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.517647, 0.909804, 0.482353, 0.552941)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_nouug"]
gradient = SubResource("Gradient_y38l7")

[sub_resource type="LabelSettings" id="LabelSettings_ikhq8"]
resource_local_to_scene = true

[sub_resource type="LabelSettings" id="LabelSettings_t8g48"]
resource_local_to_scene = true

[sub_resource type="LabelSettings" id="LabelSettings_dhhbg"]
resource_local_to_scene = true

[sub_resource type="LabelSettings" id="LabelSettings_da78c"]
resource_local_to_scene = true

[sub_resource type="LabelSettings" id="LabelSettings_3nmn4"]
resource_local_to_scene = true

[sub_resource type="LabelSettings" id="LabelSettings_5scp3"]
resource_local_to_scene = true

[sub_resource type="LabelSettings" id="LabelSettings_ik28m"]
resource_local_to_scene = true

[sub_resource type="LabelSettings" id="LabelSettings_1dgeu"]
resource_local_to_scene = true

[sub_resource type="LabelSettings" id="LabelSettings_7ovbj"]
resource_local_to_scene = true

[sub_resource type="LabelSettings" id="LabelSettings_mbtmg"]
resource_local_to_scene = true
font_size = 50
font_color = Color(0, 0, 0, 1)

[node name="TextureButton" type="TextureButton" groups=["Cell"]]
z_index = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_lr26m")
texture_normal = SubResource("GradientTexture1D_1noqf")
texture_pressed = SubResource("GradientTexture1D_7t761")
texture_hover = SubResource("GradientTexture1D_ltuy3")
texture_disabled = SubResource("GradientTexture1D_x6iji")
texture_focused = SubResource("GradientTexture1D_nouug")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("2_7t761")
metadata/_edit_use_anchors_ = true

[node name="Back" type="ColorRect" parent="."]
show_behind_parent = true
z_index = -10
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
offset_left = -0.76
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="1" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0507813
anchor_top = 0.0507813
anchor_right = 0.332031
anchor_bottom = 0.33
text = "1231313"
label_settings = SubResource("LabelSettings_ikhq8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="2" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.33
anchor_top = 0.05
anchor_right = 0.67
anchor_bottom = 0.33
label_settings = SubResource("LabelSettings_t8g48")
horizontal_alignment = 1
vertical_alignment = 1

[node name="3" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.67
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.33
label_settings = SubResource("LabelSettings_dhhbg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="4" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.33
anchor_right = 0.33
anchor_bottom = 0.67
label_settings = SubResource("LabelSettings_da78c")
horizontal_alignment = 1
vertical_alignment = 1

[node name="5" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.33
anchor_top = 0.33
anchor_right = 0.67
anchor_bottom = 0.67
label_settings = SubResource("LabelSettings_3nmn4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="6" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.67
anchor_top = 0.33
anchor_right = 0.95
anchor_bottom = 0.67
label_settings = SubResource("LabelSettings_5scp3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="7" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.67
anchor_right = 0.33
anchor_bottom = 0.95
label_settings = SubResource("LabelSettings_ik28m")
horizontal_alignment = 1
vertical_alignment = 1

[node name="8" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.33
anchor_top = 0.67
anchor_right = 0.67
anchor_bottom = 0.95
label_settings = SubResource("LabelSettings_1dgeu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="9" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.67
anchor_top = 0.67
anchor_right = 0.95
anchor_bottom = 0.95
label_settings = SubResource("LabelSettings_7ovbj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Number" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -23.7292
offset_right = 0.5
offset_bottom = 23.7292
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_mbtmg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TopColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.05
grow_vertical = 0
color = Color(0.435192, 0.435192, 0.435192, 1)

[node name="RightColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.95
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 2
color = Color(0.435294, 0.435294, 0.435294, 1)

[node name="BottomColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.95
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
color = Color(0.435294, 0.435294, 0.435294, 1)

[node name="LeftColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.05
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.435294, 0.435294, 0.435294, 1)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
